--- a/app/assets/stylesheets/billboard.css.erb
+++ b/app/assets/stylesheets/billboard.css.erb
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-image: url(<%= asset-path("turing.png") %>);
+  background-image: url(<%= asset_path("turing.png") %>);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
