--- a/app/assets/stylesheets/billboard.css.erb
+++ b/app/assets/stylesheets/billboard.css.erb
@@ -19,8 +19,8 @@ body {
   margin: 0;
   height: 40px;
   width: 100%;
-  position: absolute;
-  top: 380px;
+  position: fixed;
+  bottom: 80px;
   z-index: 2;
   background-color: #05C2D1;
   color: white;
@@ -33,8 +33,8 @@ body {
   margin: 0;
   height: 40px;
   width: 100%;
-  position: absolute;
-  top: 460px;
+  position: fixed;
+  bottom: 0px;
   z-index: 1;
   background-color: rgba(0, 0, 0, .5);
   color: white;
