Add edit/update for slides

--- a/app/views/slides/new.html.erb
+++ b/app/views/slides/new.html.erb
@@ -1,8 +1,3 @@
 <h1>Create New Slide</h1>
 
-<%= form_for(@slide) do |f| %>
-  <%= f.text_field :title, value: "Title" %>
-  <%= f.text_field :message, value: "Message" %>
-  <%= f.text_field :image_url, value: "Image URL" %>
-  <%= f.submit %>
-<% end %>
+<%= render "form" %>
