--- a/app/views/slides/show.html.erb
+++ b/app/views/slides/show.html.erb
@@ -1,3 +1,3 @@
-<h1><%= @slide.title %></h1>
-<p><%= @slide.message %></p>
-<img src="<%= @slide.image_url%>">
+<h1 class='billboard-title'><%= @slide.title %></h1>
+<h2 class='billboard-message'><%= @slide.message %></h2>
+<img src="<%= @slide.image_url%>" class='billboard-image'>
