--- a/app/assets/stylesheets/billboard.css.erb
+++ b/app/assets/stylesheets/billboard.css.erb
@@ -1,6 +1,13 @@
 body {
   padding: 0;
   margin: 0;
+  overflow: hidden;
+  font-family: sans-serif;
+}
+
+.slide-body {
+  padding: 0;
+  margin: 0;
   background-image: url(<%= asset_path("turing.png") %>);
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -24,7 +31,6 @@ body {
   z-index: 2;
   background-color: #05C2D1;
   color: white;
-  font-family: sans-serif;
   font-size: 2em;
 }
 
@@ -38,7 +44,6 @@ body {
   z-index: 1;
   background-color: rgba(0, 0, 0, .5);
   color: white;
-  font-family: sans-serif;
   font-size: 1.5em;
   float: left;
 }
@@ -46,4 +51,14 @@ body {
 .billboard-image {
   position: relative;
   width: 100%;
+}
+
+.success {
+  padding: 20px;
+  background-color: #019833;
+  color: white;
+}
+
+.success a {
+  color: white;
 }
