--- a/app/assets/stylesheets/billboard.css.erb
+++ b/app/assets/stylesheets/billboard.css.erb
@@ -1,18 +1,28 @@
 body {
   padding: 0;
   margin: 0;
-  overflow: hidden;
-  font-family: sans-serif;
-}
-
-.slide-body {
-  padding: 0;
-  margin: 0;
   background-image: url(<%= asset_path("turing.png") %>);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-color: black;
+  overflow: hidden;
+  font-family: sans-serif;
+}
+
+.app-body {
+  padding: 20px;
+  margin: 0;
+  background-color: rgba(0, 0, 0, .5);
+  color: white;
+  z-index: 2;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.app-body a {
+  color: white;
 }
 
 #main-billboard {
@@ -50,7 +60,9 @@ body {
 
 .billboard-image {
   position: relative;
-  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 110%;
 }
 
 .success {
