--- a/app/views/slides/new.html.erb
+++ b/app/views/slides/new.html.erb
@@ -1,3 +1,6 @@
-<h1>Create New Slide</h1>
+<div class="app-body">
+  <h1>Create New Slide</h1>
 
-<%= render "form" %>
+  <%= render "form" %>
+</div>
+
