Change image styling to keep backgrounds centered

--- a/app/assets/stylesheets/billboard.css.erb
+++ b/app/assets/stylesheets/billboard.css.erb
@@ -60,9 +60,7 @@ body {
 
 .billboard-image {
   position: relative;
-  min-width: 100%;
-  min-height: 100%;
-  max-width: 110%;
+  width: 100%;
 }
 
 .success {
