--- a/app/views/user/slides/_form.html.erb
+++ b/app/views/user/slides/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for([:user, @slide]) do |f| %>
-  <%= f.text_field :title, placeholder: "Title" %>
-  <%= f.text_field :message, placeholder: "Message" %>
-  <%= f.text_field :image_url, placeholder: "Image URL" %>
+  <%= f.text_field :title, placeholder: "Title" %><br>
+  <%= f.text_field :message, placeholder: "Message" %><br>
+  <%= f.text_field :image_url, placeholder: "Image URL" %><br>
   <%= f.submit %>
 <% end %>
