--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -56,6 +56,16 @@ nav li a:hover {
   background-color: #015267;
 }
 
+select {
+  width: 10%;
+  padding: 5px;
+  border-radius: 4px;
+  border: none;
+  padding: 12px 20px;
+  margin: 8px;
+  border: 2px solid black;
+}
+
 input[type=text] {
   padding: 5px;
   width: 40%;
