--- a/app/views/layouts/billboard.html.erb
+++ b/app/views/layouts/billboard.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BillboardApi</title>
+    <title>Billboard</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'billboard', media: 'all' %>
