--- a/app/views/slides/_form.html.erb
+++ b/app/views/slides/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@slide) do |f| %>
   <%= f.text_field :title, placeholder: "Title" %><br>
   <%= f.text_field :message, placeholder: "Message" %><br>
-  <%= f.text_field :image_url, placeholder: "Image URL" %><br>
+  <%= f.file_field :image %>
   <%= select_tag("slide[expiration_date]", options_for_select(@dates, @dates.first), prompt: "Expiration Date") %>
   <%= f.submit %>
 <% end %>
