Add status to slides

--- a/app/views/admin/slides/index.html.erb
+++ b/app/views/admin/slides/index.html.erb
@@ -2,8 +2,11 @@
   <h1>All Slides</h1>
 
   <% @slides.each do |slide| %>
-
-    <p><%= link_to slide.title, admin_slide_path(slide) %> <%= button_to "Delete Slide", admin_slide_path(slide), method: :delete %> <%= button_to "Edit Slide", edit_admin_slide_path(slide), method: :get %></p>
-
+    <p>
+      <%= link_to slide.title, admin_slide_path(slide) %>
+      <%= button_to "Delete Slide", admin_slide_path(slide), method: :delete %>
+      <%= button_to "Edit Slide", edit_admin_slide_path(slide), method: :get %>
+      <%= button_to "Approve Slide", admin_slide_path(slide, {status: :approved}), method: :patch %>
+    </p>
   <% end %>
 </div>
