--- a/app/views/admin/slides/show.html.erb
+++ b/app/views/admin/slides/show.html.erb
@@ -1,6 +1,7 @@
 <div class="app-body">
   <%= link_to "Edit Slide", edit_admin_slide_path(@slide) %>
   <%= link_to "Delete Slide", admin_slide_path(@slide), method: :delete %>
+  <%= link_to "Approve Slide", admin_slide_path(@slide, {status: :approved}), method: :patch %>
 </div>
 <h1 class='billboard-title'><%= @slide.title %></h1>
 <h2 class='billboard-message'><%= @slide.message %></h2>
