Change enum language and add approval check on update

--- a/app/views/slides/show.html.erb
+++ b/app/views/slides/show.html.erb
@@ -4,7 +4,7 @@
   <%= link_to "Delete Slide", slide_path(@slide), method: :delete %>
   </p>
   <p>Current Status: <%= @slide.status.capitalize %></p>
-  <p>Slides will be put in rotation once approved.</p>
+  <p>Slides will be displayed once approved.</p>
 </div>
 <h1 class='billboard-title'><%= @slide.title %></h1>
 <h2 class='billboard-message'><%= @slide.message %></h2>
