--- a/app/views/slides/index.html.erb
+++ b/app/views/slides/index.html.erb
@@ -2,7 +2,7 @@
   <h1>All Slides</h1>
   <% @slides.each do |slide| %>
 
-    <p><%= link_to slide.title, slide_path(slide) %> <%= button_to "Edit Slide", edit_slide_path(slide), method: :get %> <%= button_to "Delete Slide", slide_path(slide), method: :delete %></p>
+    <p><%= link_to slide.title_with_blanks, slide_path(slide) %> <%= button_to "Edit Slide", edit_slide_path(slide), method: :get %> <%= button_to "Delete Slide", slide_path(slide), method: :delete %></p>
 
   <% end %>
 </div>
