--- a/app/views/slides/new.html.erb
+++ b/app/views/slides/new.html.erb
@@ -2,5 +2,13 @@
   <h1>Create New Slide</h1>
 
   <%= render "form" %>
+
+  <p>Tips</p>
+  <ul>
+    <li>Creating a slide with no title will display only the image you provide</li>
+    <li>Images are pinned to the top of the frame and expanded to be as wide as the viewport</li>
+    <li>To ensure that your slide fills the viewport, make them slightly taller than necessary</li>
+    <li>Do not put critical information at the bottom of an image as it may be cut off or covered by the Title and Message</li>
+  </ul>
 </div>
 
